@@ -90,7 +90,7 @@ authenticate themselves to the daemon.  The recommended permissions for this
 directory are 1733.  This option is only valid on platforms where client
 authentication is performed via a file-descriptor passing mechanism.
 .TP
-.BI "--check-group-mtime " boolean
+.BI "--group-check-mtime " boolean
 Specify whether the modification time of \fI/etc/group\fR should be checked
 before updating the supplementary group membership mapping.  If this value is
 non-zero, the check will be enabled and the mapping will not be updated unless
