@@ -1,5 +1,8 @@
 2006-12-21  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* NEWS, src/munged/conf.c, src/munged/munged.8.in:
+	  Changed --check-group-mtime to --group-check-mtime.
+
 	* src/munged/gids.c: Added gids map timing information to log message.
 
 	* HISTORY, META, NEWS: Updated for 0.5.7 release.
